Fixed icons not showing.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+
+@import	'icons';
+@import	'particles';
+
 body {
     background: #000;
     color: #fff;
@@ -57,31 +61,32 @@ nav {
         li {
             background: rgba(0, 0, 0, 0.5);
             padding: 0px 5px;
-        }
-        li:hover {
-            background: rgba(66, 66, 66, 0.7);
-        }
-        li a {
-            transition: color .2s;
-        }
-        li:hover a {
-            color: rgb(224, 56, 56);
-        }
-        li:first-child:hover {
-            border-top-left-radius: 5px;
-            border-bottom-left-radius: 5px;
-        }
-        li:last-child:hover {
-            border-top-right-radius: 5px;
-            border-bottom-right-radius: 5px;
-        }
-        li:last-child {
-            border-bottom-right-radius: 5px;
-            border-top-right-radius: 5px;
-        }
-        li:first-child {
-            border-bottom-left-radius: 5px;
-            border-top-left-radius: 5px;
+
+            a {
+                transition: color .2s;
+            }
+            &:hover {
+                background: rgba(66, 66, 66, 0.7);
+            }
+            &:hover a {
+                color: rgb(224, 56, 56);
+            }
+            &:first-child:hover {
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
+            }
+            &:last-child:hover {
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
+            }
+            &:last-child {
+                border-bottom-right-radius: 5px;
+                border-top-right-radius: 5px;
+            }
+            &:first-child {
+                border-bottom-left-radius: 5px;
+                border-top-left-radius: 5px;
+            }
         }
     }
     a {
@@ -110,23 +115,30 @@ section.blog {
     float: left;
     max-width: 900px;
 
-    ul li {
-        padding: 10px 10px;
-        margin-top: 35px;
-        background-color: black;
-        background-position: 50% 25%;
-        background-size: cover;
-        box-shadow: inset 0 0 20px #000;
-        transition: box-shadow 0.3s;
-    }
-    ul li:hover {
-        box-shadow: inset 0 0 10px #000;
-    }
-    ul .readmore {
-        width: 100%;
-        text-align: right;
-        display: block;
-        text-decoration: none;
+    ul {
+        li {
+            padding: 10px 10px;
+            margin-top: 35px;
+            background-color: black;
+            background-position: 50% 25%;
+            background-size: cover;
+            box-shadow: inset 0 0 20px #000;
+            transition: box-shadow 0.3s;
+        }
+        li:hover {
+            box-shadow: inset 0 0 10px #000;
+        }
+        .readmore {
+            width: 100%;
+            text-align: right;
+            display: block;
+            text-decoration: none;
+            margin-top: 10px;
+
+            a {
+                text-decoration: none;
+            }
+        }
     }
     article p {
         margin-top: 0px;
@@ -139,13 +151,6 @@ section.blog {
         padding: 2px 5px;
         border-radius: 5px;
         margin-top: 10px;
-    }
-    ul .readmore {
-        margin-top: 10px;
-
-        a {
-            text-decoration: none;
-        }
     }
 }
 section.blog ul,
@@ -160,6 +165,4 @@ section.social {
 }
 
 @import	'responsive';
-@import	'icons';
-@import	'particles';
-@import	'twitter';
+// @import	'twitter';
